--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <canvas id="canvas"></canvas>
 		<div class="h"><marquee>   Happy New Year 2021!!</marquee></div>
 	    <div class="h"><marquee style="color: rgb(252, 239, 61)"><br>Wishing you a year full of</marquee></div>
-	    <div class="h"><br> <br> </marquee style="color: rgb(252, 239, 61)"> blessing and filled with</div>
-	    <div class="h"><marquee style="color: rgb(252, 239, 61)"><br> <br> <br></marquee>a new adventure.</div>
+	    <div class="h"><br> <br> </marquee style="color: rgb(252, 239, 61)"> blessing and filled with</marquee></div>
+	    <div class="h"><marquee style="color: rgb(252, 239, 61)"><br> <br> <br></marquee>a new adventure.</marquee></div>
 	 
 <div class="start">Tap here..</div>
  <div class="a"><marquee>Have a Blessed New Year!!!</marquee></div>
